tests/sema/bad/07_assign_signal.sg
signal s = 1;
s = 2;
